# Pacman-3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/3d_models/kodama/: kodama.blend  kodama.mtl
src/: parameters.h
src/game/: Game.cpp  Game.h  Ghost.cpp  Ghost.h  Map.cpp  Map.h
src/opengl/: Program.cpp  Program.h
src/shaders/map/: fragment.shader  vertex.shader
src/shaders/objects/: fragment.shader  vertex.shader
src/utils/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object3D.cpp  Object3D.h
